@@ -1,25 +1,49 @@
-# run.ps1
+# ABC
+function Get-LatestVersion {
+    param (
+        [string]$moduleName
+    )
 
-# Exemple de funcionament: .\run.ps1 com.project.Main
-# on 'Main' és la classe amb 'main' que volem executar
+    # Find the JAR files and sort them by version while excluding javadoc and sources
+    $jarFiles = Get-ChildItem -Path "$env:USERPROFILE\.m2\repository\org\openjfx" -Recurse -File |
+                Where-Object { $_.Name -like "${moduleName}-*.jar" -and $_.Name -notmatch "(javadoc|sources)" } |
+                Sort-Object Name -Descending
 
-# Set console output to UTF-8
-[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
+    # Return the latest version's path
+    if ($jarFiles.Count -gt 0) {
+        return $jarFiles[0].FullName
+    } else {
+        return $null
+    }
+}
 
-# Change to the directory where the script is located
-Set-Location $PSScriptRoot
+$fxBasePath = Get-LatestVersion "javafx-base"
+$fxControlsPath = Get-LatestVersion "javafx-controls"
+$fxFxmlPath = Get-LatestVersion "javafx-fxml"
+$fxGraphicsPath = Get-LatestVersion "javafx-graphics"
 
-# Set MAVEN_OPTS environment variable
-$env:MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -Dfile.encoding=UTF8"
+$fxPath = "$fxBasePath;$fxControlsPath;$fxFxmlPath;$fxGraphicsPath"
+
+if (-not $fxPath) {
+    Write-Host "No es pot trobar el mòdul JavaFX al repositori Maven local."
+    exit 1
+}
+
+# Opcions comunes per a MAVEN_OPTS
+$env:MAVEN_OPTS = "--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --module-path $fxPath --add-modules javafx.controls,javafx.fxml,javafx.graphics"
+
+# Resta de l'script
 
 # Check for the first argument and set it as the main class
 $mainClass = $args[0]
 
-Write-Host "Setting MAVEN_OPTS to: $env:MAVEN_OPTS"
-Write-Host "Main Class: $mainClass"
+Write-Output "Setting MAVEN_OPTS to: $MAVEN_OPTS"
+Write-Output "Main Class: $mainClass"
 
-# Execute mvn command with the profile and main class as arguments
-$execArg = "-Dexec.mainClass=" + $mainClass
-Write-Host "Exec args: $execArg"
+# Split the execArg into an array
+$execArgs = @("-PrunMain", "-Dexec.mainClass=$mainClass")
 
-mvn -q clean test-compile exec:java -PrunMain $execArg
+Write-Output "Exec args: $($execArgs -join ' ')"
+
+# Execute mvn command
+mvn clean test-compile exec:java $execArgs
